importing VSC debug configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
-    "idf.flashType": "UART",
+    "idf.flashType": "JTAG",
     "idf.portWin": "COM11",
     "idf.adapterTargetName": "esp32s3",
     "idf.openOcdConfigs": [
-        "interface/ftdi/esp32_devkitj_v1.cfg",
-        "target/esp32s3.cfg"
+        "board/esp32s3-builtin.cfg"
     ],
     "files.associations": {
         "freertos.h": "c",
@@ -21,5 +20,6 @@
     "editor.formatOnSave": true,
     "cSpell.words": [
         "ssid"
-    ]
+    ],
+    "idf.port": "/dev/ttyACM0"
 }
