--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,8 +3,28 @@
   "configurations": [
     {
       "type": "espidf",
-      "name": "Launch",
-      "request": "launch"
+      "name": "Launch - USB_JTAG",
+      "request": "launch",
+      "verifyAppBinBeforeDebug": false,
+      "initGdbCommands": [
+        "target remote :3333",
+        "symbol-file ${workspaceFolder}/build/esp-miner.elf",
+        "mon reset halt",
+        "flushregs",
+        "thb app_main",
+        "c"
+      ],
+    },
+    {
+      "type": "espidf",
+      "name": "Connect - USB_JTAG",
+      "request": "launch",
+      "verifyAppBinBeforeDebug": false,
+      "initGdbCommands": [
+        "target remote :3333",
+        "symbol-file ${workspaceFolder}/build/esp-miner.elf",
+        "mon halt"
+      ],
     }
   ]
 }
